--- a/Scraper_+_Data/Game_Data_Scraper.ipynb
+++ b/Scraper_+_Data/Game_Data_Scraper.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "dbc54d2f-b151-4065-ad51-3af6a1a4b2b2",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Importing libraries"
    ]
@@ -62,7 +64,9 @@
   {
    "cell_type": "markdown",
    "id": "939d804b-2ec8-4169-9a0d-58c5fa78594e",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Gets the chapter images"
    ]
@@ -132,7 +136,9 @@
   {
    "cell_type": "markdown",
    "id": "d2a14228-7099-4d34-861e-a6938377dc03",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Get the chapter data and combine it with the images data to get a final CSV"
    ]
@@ -212,7 +218,9 @@
   {
    "cell_type": "markdown",
    "id": "38922740-6036-439e-b71f-d1cf6db19c56",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Chapter walkthrough"
    ]
