--- a/Scraper_+_Data/Game_Data_Scraper.ipynb
+++ b/Scraper_+_Data/Game_Data_Scraper.ipynb
@@ -3,16 +3,14 @@
   {
    "cell_type": "markdown",
    "id": "dbc54d2f-b151-4065-ad51-3af6a1a4b2b2",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Importing libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "id": "3c424417-e03e-47e2-921a-718fd33fabac",
    "metadata": {},
    "outputs": [],
@@ -64,9 +62,7 @@
   {
    "cell_type": "markdown",
    "id": "939d804b-2ec8-4169-9a0d-58c5fa78594e",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Gets the chapter images"
    ]
@@ -136,9 +132,7 @@
   {
    "cell_type": "markdown",
    "id": "d2a14228-7099-4d34-861e-a6938377dc03",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Get the chapter data and combine it with the images data to get a final CSV"
    ]
@@ -198,7 +192,7 @@
     "\n",
     "    row = {\n",
     "        'Chapter Name': chapter_key,  \n",
-    "        'Chapter Image': chapter_images.get(chapter_name, 'No Image Available'),  \n",
+    "        'Chapter Image': chapter_images.get(chapter_name, 'No Image Available'), # placeholder if no image is found \n",
     "        'Sub-chapters': ', '.join([sub_chap['text'] for sub_chap in sub_chapters_dict.get(chapter_key, [])]),\n",
     "        'Sub-chapter URLs': ', '.join([sub_chap['url'] for sub_chap in sub_chapters_dict.get(chapter_key, [])]),\n",
     "    }\n",
@@ -218,16 +212,14 @@
   {
    "cell_type": "markdown",
    "id": "38922740-6036-439e-b71f-d1cf6db19c56",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Chapter walkthrough"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 3,
    "id": "cfd85050-0da6-4619-8656-79e661987792",
    "metadata": {},
    "outputs": [
@@ -328,45 +320,34 @@
        "4  https://game8.co/games/Last-of-Us-2/archives/2...  "
       ]
      },
+     "execution_count": 3,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "chapters_df = pd.read_csv('chapter_data.csv')\n",
-    "display(chapters_df.head())"
+    "chapters_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 5,
    "id": "197180ec-fd6c-4cc8-9804-e94508821f7b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Chapter: Chapter 11: The Farm\n",
-      "Sub-chapter URLs list: ['https://game8.co/games/Last-of-Us-2/archives/290846']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "all_walkthrough_data = []\n",
     "\n",
     "for index, row in chapters_df.iterrows():\n",
     "    chapter_name = row['Chapter Name']\n",
     "    sub_chapter_urls_string = row['Sub-chapter URLs']\n",
-    "    sub_chapter_urls_list = sub_chapter_urls_string.split(', ')\n",
-    "\n",
-    "print(f\"Chapter: {chapter_name}\")\n",
-    "print(f\"Sub-chapter URLs list: {sub_chapter_urls_list}\")"
+    "    sub_chapter_urls_list = sub_chapter_urls_string.split(', ')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 6,
    "id": "ed96e7e5-65cd-4b3a-8b3d-6cea16f772e3",
    "metadata": {},
    "outputs": [],
@@ -382,6 +363,8 @@
     "    sub_chapter_names_list = sub_chapter_names_string.split(', ')\n",
     "\n",
     "\n",
+    "    main_chapter_name = chapter_name.split(':')[-1].strip()\n",
+    "\n",
     "    for i, sub_chapter_url in enumerate(sub_chapter_urls_list):\n",
     "        try:\n",
     "            response = requests.get(sub_chapter_url)\n",
@@ -389,9 +372,17 @@
     "\n",
     "            chapter_soup = BeautifulSoup(response.text, 'html.parser')\n",
     "\n",
-    "\n",
     "            sub_chapter_tag = chapter_soup.find('h2', class_='a-header--2')\n",
-    "            sub_chapter_name = sub_chapter_tag.get_text(strip=True) if sub_chapter_tag else sub_chapter_names_list[i].strip()\n",
+    "            if sub_chapter_tag:\n",
+    "                extracted_sub_chapter_name = sub_chapter_tag.get_text(strip=True)\n",
+    "                extracted_sub_chapter_name = extracted_sub_chapter_name.replace(f\"{main_chapter_name} - \", \"\").strip()\n",
+    "                extracted_sub_chapter_name = extracted_sub_chapter_name.replace(f\"{main_chapter_name}: \", \"\").strip()\n",
+    "\n",
+    "                sub_chapter_name = f\"{main_chapter_name} - {extracted_sub_chapter_name}\"\n",
+    "            elif i < len(sub_chapter_names_list):\n",
+    "                sub_chapter_name = f\"{main_chapter_name} - {sub_chapter_names_list[i].strip()}\"\n",
+    "            else:\n",
+    "                sub_chapter_name = 'N/A'\n",
     "\n",
     "\n",
     "            spans = chapter_soup.find_all('span', style=\"font-size:120%;\")\n",
@@ -405,7 +396,7 @@
     "                for item in extracted_text[1:]:\n",
     "                    formatted_text.append(item.lower())\n",
     "\n",
-    "            # Group formatted text into lines of two\n",
+    "\n",
     "            grouped_text = []\n",
     "            for j in range(0, len(formatted_text), 2):\n",
     "                line_items = formatted_text[j:j+2]\n",
@@ -425,7 +416,7 @@
     "            print(f\"Error fetching {sub_chapter_url}: {e}\")\n",
     "            all_walkthrough_data.append({\n",
     "                'Chapter Name': chapter_name,\n",
-    "                'Sub-chapter Name': sub_chapter_names_list[i].strip() if i < len(sub_chapter_names_list) else 'N/A',\n",
+    "                'Sub-chapter Name': f\"{main_chapter_name} - {sub_chapter_names_list[i].strip()}\" if i < len(sub_chapter_names_list) else 'N/A',\n",
     "                'Sub-chapter URL': sub_chapter_url,\n",
     "                'Walkthrough Text': f\"Error fetching data: {e}\"\n",
     "            })\n",
@@ -433,15 +424,15 @@
     "            print(f\"An unexpected error occurred while processing {sub_chapter_url}: {e}\")\n",
     "            all_walkthrough_data.append({\n",
     "                'Chapter Name': chapter_name,\n",
-    "                'Sub-chapter Name': sub_chapter_names_list[i].strip() if i < len(sub_chapter_names_list) else 'N/A',\n",
+    "                'Sub-chapter Name': f\"{main_chapter_name} - {sub_chapter_names_list[i].strip()}\" if i < len(sub_chapter_names_list) else 'N/A',\n",
     "                'Sub-chapter URL': sub_chapter_url,\n",
     "                'Walkthrough Text': f\"An unexpected error occurred: {e}\"\n",
-    "            })\n"
+    "            })"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 7,
    "id": "34708ec3-ce74-43a6-add5-7d0f873d26e0",
    "metadata": {},
    "outputs": [
@@ -535,38 +526,32 @@
        "4  Run away from the horde of infected, and follo...  "
       ]
      },
+     "execution_count": 7,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "walkthrough_df = pd.DataFrame(all_walkthrough_data)\n",
-    "display(walkthrough_df.head())"
+    "walkthrough_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 9,
    "id": "f2949cfd-f28f-4f2e-8dda-ef9e9531e6e4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Walkthrough data with sub-chapter names saved to 'walkthrough_data_with_names.csv'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "walkthrough_df.to_csv('walkthrough_data_with_names.csv', index=False)\n",
-    "print(\"Walkthrough data with sub-chapter names saved to 'walkthrough_data_with_names.csv'\")"
+    "walkthrough_df.to_csv('walkthrough_data.csv', index=False)"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "94fec3cf-ef7e-4edc-90b2-e34ac532b7bb",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Tips and Tricks"
    ]
