--- a/Scraper_+_Data/Game_Data_Scraper.ipynb
+++ b/Scraper_+_Data/Game_Data_Scraper.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "3c424417-e03e-47e2-921a-718fd33fabac",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 16,
    "id": "3ef14658-b19f-4e96-8d5f-e744349be73d",
    "metadata": {},
    "outputs": [
@@ -38,7 +38,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 17,
    "id": "525119b3-fd6b-4cbd-8df7-7ff84923eee0",
    "metadata": {},
    "outputs": [],
@@ -68,8 +68,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a4f215c1-cd7d-49ee-b0c1-3786324de5bf",
+   "metadata": {},
+   "source": [
+    "This function is used to get all of the images links based on the alt text.\n",
+    "\n",
+    "So by making a loop to go through either data-src or src images links we get a list of images links and depending if the src begins with //, we can add the https or the full website url to make it a full url.\n",
+    "\n",
+    "Then it compares if any of the target names are found in the url alt texts, if yes then they are agged to the images link.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 18,
    "id": "3a765bec-0eb9-40a9-8bc7-612d7348fd37",
    "metadata": {},
    "outputs": [],
@@ -99,8 +111,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d7f0bf13-e5ca-4074-a30f-5d480aacc082",
+   "metadata": {},
+   "source": [
+    "Make a list of names I need to specifically find and run the function.\n",
+    "\n",
+    "Then I run a loop through each image and compare their alt text to my find names text and make a dictionary key pair to store in the chapter_images dictionary."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 19,
    "id": "4824a293-4ae9-4fff-a2db-dfc995a33169",
    "metadata": {},
    "outputs": [
@@ -138,8 +160,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8bcda596-6105-44a2-9312-13dd0e7c2a7f",
+   "metadata": {},
+   "source": [
+    "This code is extracting both chapter names and their sub-chapters with urls.\n",
+    "\n",
+    "It finds teh chapter names -> processes each chapter by finding their sub-chapter and links them together\n",
+    "\n",
+    "At the end for each chapter it has a list of sub-chapter, each containtg a name and url, and storing them in a dictionary"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 20,
    "id": "1c661d93-c35f-4b7a-a17f-07597f65c56d",
    "metadata": {},
    "outputs": [],
@@ -172,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 21,
    "id": "52c258e5-b183-4f69-9b14-d81ecfe8420b",
    "metadata": {},
    "outputs": [
@@ -219,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "id": "cfd85050-0da6-4619-8656-79e661987792",
    "metadata": {},
    "outputs": [
@@ -320,7 +354,7 @@
        "4  https://game8.co/games/Last-of-Us-2/archives/2...  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "id": "197180ec-fd6c-4cc8-9804-e94508821f7b",
    "metadata": {},
    "outputs": [],
@@ -347,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "id": "ed96e7e5-65cd-4b3a-8b3d-6cea16f772e3",
    "metadata": {},
    "outputs": [],
@@ -432,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "id": "34708ec3-ce74-43a6-add5-7d0f873d26e0",
    "metadata": {},
    "outputs": [
@@ -495,7 +529,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Chapter 1: Jackson</td>\n",
-       "      <td>Jackson: The Horde Walkthrough</td>\n",
+       "      <td>Jackson - The Horde Walkthrough</td>\n",
        "      <td>https://game8.co/games/Last-of-Us-2/archives/2...</td>\n",
        "      <td>Run away from the horde of infected, and follo...</td>\n",
        "    </tr>\n",
@@ -509,7 +543,7 @@
        "1  Chapter 1: Jackson     Jackson - Waking Up Walkthrough   \n",
        "2  Chapter 1: Jackson  Jackson - The Overlook Walkthrough   \n",
        "3  Chapter 1: Jackson        Jackson - Patrol Walkthrough   \n",
-       "4  Chapter 1: Jackson      Jackson: The Horde Walkthrough   \n",
+       "4  Chapter 1: Jackson     Jackson - The Horde Walkthrough   \n",
        "\n",
        "                                     Sub-chapter URL  \\\n",
        "0  https://game8.co/games/Last-of-Us-2/archives/2...   \n",
@@ -526,7 +560,7 @@
        "4  Run away from the horde of infected, and follo...  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "id": "f2949cfd-f28f-4f2e-8dda-ef9e9531e6e4",
    "metadata": {},
    "outputs": [],
@@ -549,11 +583,32 @@
   {
    "cell_type": "markdown",
    "id": "94fec3cf-ef7e-4edc-90b2-e34ac532b7bb",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Tips and Tricks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "ca9fcde9-c15e-4f65-bfb0-e7e353faba95",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tips = 'https://game8.co/games/Last-of-Us-2/archives/290295' # tips page\n",
+    "response = requests.get(tips)\n",
+    "response"
    ]
   },
   {
