--- a/Scraper_+_Data/Game_Data_Scraper.ipynb
+++ b/Scraper_+_Data/Game_Data_Scraper.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "dbc54d2f-b151-4065-ad51-3af6a1a4b2b2",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Importing libraries"
    ]
@@ -62,7 +64,9 @@
   {
    "cell_type": "markdown",
    "id": "939d804b-2ec8-4169-9a0d-58c5fa78594e",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Gets the chapter images"
    ]
@@ -154,7 +158,9 @@
   {
    "cell_type": "markdown",
    "id": "d2a14228-7099-4d34-861e-a6938377dc03",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Get the chapter data and combine it with the images data to get a final CSV"
    ]
@@ -246,7 +252,9 @@
   {
    "cell_type": "markdown",
    "id": "38922740-6036-439e-b71f-d1cf6db19c56",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Chapter walkthrough"
    ]
@@ -1132,6 +1140,287 @@
    "metadata": {},
    "source": [
     "## Characters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "3e37fd6b-27be-4ee2-86c0-aa968e243695",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "character = 'https://game8.co/games/Last-of-Us-2/archives/290477' #character page\n",
+    "response = requests.get(character)\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "519725df-7448-467b-bd16-b2db8b7d4a5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "character_soup = BeautifulSoup(response.text, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f344a19d-7335-4d35-8a31-87f42dfec379",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_names = [\n",
+    "    'Ellie Icon.png',\n",
+    "    'Dina Icon.png',\n",
+    "    'Joel Icon.png',\n",
+    "    'Jesse Icon.png',\n",
+    "    'Tommy Icon.png',\n",
+    "    'Maria Icon.png',\n",
+    "    'Seth Icon.png',\n",
+    "    'Abby Icon.png',\n",
+    "    'Owen Icon.png',\n",
+    "    'Mel Icon.png',\n",
+    "    'Nora Icon.png',\n",
+    "    'Manny Icon.png',\n",
+    "    'Jordan Icon.png',\n",
+    "    'Isaac Icon.png',\n",
+    "    'Alice Icon.png',\n",
+    "    'Jerry Icon.png',\n",
+    "    'Whitney Icon.png',\n",
+    "    'Nick Icon.png',\n",
+    "    'Lev Icon.png',\n",
+    "    'Yara Icon.png',\n",
+    "    'Emily Icon.png'\n",
+    "\n",
+    "]\n",
+    "\n",
+    "\n",
+    "filtered_images = get_filtered_image_links(character_soup, target_names)\n",
+    "\n",
+    "character_images = {}\n",
+    "for image in filtered_images:\n",
+    "    for character_name_with_icon in target_names:\n",
+    "        if character_name_with_icon.lower() in image['alt']:\n",
+    "            # Extract just the character name by removing ' Icon.png'\n",
+    "            character_name = character_name_with_icon.replace(' Icon.png', '').strip()\n",
+    "            character_images[character_name] = image['url']\n",
+    "            break\n",
+    "\n",
+    "\n",
+    "print(character_images)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f01b52f1-6928-4da1-8991-671a7a2a354b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "character_main_image = {'Ellie' : 'https://img.game8.co/3253674/d94845ae35742fb7aeab666c545ce17c.jpeg/show',\n",
+    "                          'Joel' : 'https://img.game8.co/3253664/103b20839a9d395c4391a3465867cdcb.jpeg/show',\n",
+    "                          'Dina' : 'https://img.game8.co/3253702/457134b322ef240fbf357b4f3e2022bb.jpeg/show',\n",
+    "                          'Abby' : 'https://img.game8.co/3253680/e37a8d8fc6ff287dbf28926e004aebd3.jpeg/show',\n",
+    "                          'Yara' : 'https://img.game8.co/3253753/a53e019404ad3d253ca442e87e2b5270.jpeg/show',\n",
+    "                          'Nora' : 'https://img.game8.co/3253701/527bfd2d36d8b19d5dd586499b79b98f.jpeg/show',\n",
+    "                          'Lev_' : 'https://img.game8.co/3253754/95629e336e9e7bc1a7f9ffd871a12089.jpeg/show',\n",
+    "                          'Emily' : 'https://img.game8.co/3253750/b64de7fa1386b449733d20ec2343fc69.jpeg/show',\n",
+    "                          'Jesse' : 'https://img.game8.co/3253666/cd8a49d1e146c09662f466f1417b8063.jpeg/show',\n",
+    "                          'Tommy' : 'https://img.game8.co/3253667/5f6bdd9e98558a4b3a8d18fd39c8d45a.jpeg/show',\n",
+    "                          'Seth' : 'https://img.game8.co/3253700/442701af05e3748b9ccedc8a793a0000.jpeg/show',\n",
+    "                          'Mel' : 'https://img.game8.co/3253673/43e4ae0186bd6083dc0b0f1bda3d6fae.jpeg/show',\n",
+    "                          'Owen' : 'https://img.game8.co/3253668/37cb30d83159273a09bcd4c3eac43dc1.jpeg/show',\n",
+    "                          'Manny' : 'https://img.game8.co/3253714/59d1b2cada49306c655dc50b5690e78e.jpeg/show',\n",
+    "                          'Jordan' : 'https://img.game8.co/3253748/db9e05b070614c194c9d8e910f158883.jpeg/show',\n",
+    "                          'Nick' : 'https://img.game8.co/3253751/0cbbe465209bd878cc3c4fe7b134b961.jpeg/show',\n",
+    "                          'Alice' : 'https://img.game8.co/3253752/40349185b76d1d125192c59788f9e7a9.jpeg/show',\n",
+    "                          'Maria' : 'https://img.game8.co/3253871/34d5cb007beec80ed621a67594bcd565.jpeg/show',\n",
+    "                          'Jerry' : 'https://img.game8.co/3253888/433549ea350fab01b217e903199f165d.jpeg/show',\n",
+    "                          'Whitney' : 'https://img.game8.co/3253876/211eb1e5683a5d9ae17872049440fc81.jpeg/show',\n",
+    "                          'Isaac' : 'https://img.game8.co/3253872/66e409e5ea1a6c1649ac10146a013d70.jpeg/show'\n",
+    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4976962-121c-4f24-a5c6-e2e581dc7553",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "character_profile_URLs = {'Ellie_page' : 'https://game8.co/games/Last-of-Us-2/archives/290451',\n",
+    "                          'Joel_page' : 'https://game8.co/games/Last-of-Us-2/archives/290454',\n",
+    "                          'Dina_page' : 'https://game8.co/games/Last-of-Us-2/archives/290477',\n",
+    "                          'Abby_page' : 'https://game8.co/games/Last-of-Us-2/archives/290497',\n",
+    "                          'Yara_page' : 'https://game8.co/games/Last-of-Us-2/archives/290493',\n",
+    "                          'Nora_page' : 'https://game8.co/games/Last-of-Us-2/archives/290491',\n",
+    "                          'Lev_page' : 'https://game8.co/games/Last-of-Us-2/archives/290495',\n",
+    "                          'Emily_page' : 'https://game8.co/games/Last-of-Us-2/archives/290496',\n",
+    "                          'Jesse_page' : 'https://game8.co/games/Last-of-Us-2/archives/290486',\n",
+    "                          'Tommy_page' : 'https://game8.co/games/Last-of-Us-2/archives/290458',\n",
+    "                          'Seth_page' : 'https://game8.co/games/Last-of-Us-2/archives/291199',\n",
+    "                          'Mel_page' : 'https://game8.co/games/Last-of-Us-2/archives/291200',\n",
+    "                          'Owen_page' : 'https://game8.co/games/Last-of-Us-2/archives/291205',\n",
+    "                          'Manny_page' : 'https://game8.co/games/Last-of-Us-2/archives/291206',\n",
+    "                          'Jordan_page' : 'https://game8.co/games/Last-of-Us-2/archives/291209',\n",
+    "                          'Nick_page' : 'https://game8.co/games/Last-of-Us-2/archives/291210',\n",
+    "                          'Alice_page' : 'https://game8.co/games/Last-of-Us-2/archives/291211',\n",
+    "                          'Maria_page' : 'https://game8.co/games/Last-of-Us-2/archives/291219',\n",
+    "                          'Jerry_page' : 'https://game8.co/games/Last-of-Us-2/archives/291220',\n",
+    "                          'Whitney_page' : 'https://game8.co/games/Last-of-Us-2/archives/291221',\n",
+    "                          'Isaac_page' : 'https://game8.co/games/Last-of-Us-2/archives/291222'\n",
+    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "816237a7-ff37-46af-9db8-783146492d85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "character_details_list = []\n",
+    "\n",
+    "for character_name_with_suffix, profile_url in character_profile_URLs.items():\n",
+    "    try:\n",
+    "        response = requests.get(profile_url)\n",
+    "        response.raise_for_status() # Raise an exception for bad status codes\n",
+    "\n",
+    "        profile_soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "\n",
+    "        # Extract the character name without the '_page' suffix\n",
+    "        character_name = character_name_with_suffix.replace('_page', '').strip()\n",
+    "\n",
+    "\n",
+    "        # --- Extract Character Information based on the provided structure ---\n",
+    "        character_info_dict = {}\n",
+    "        current_heading = None\n",
+    "\n",
+    "        # Find all relevant heading, paragraph, and table tags in order\n",
+    "        content_elements = profile_soup.select('h2.a-header--2, h3.a-header--3, p.a-paragraph, table.a-table')\n",
+    "\n",
+    "        for element in content_elements:\n",
+    "            if element.name in ['h2', 'h3']:\n",
+    "                current_heading = element.get_text(strip=True)\n",
+    "                character_info_dict[current_heading] = [] # Initialize a list for content under this heading\n",
+    "            elif element.name == 'p' and 'a-paragraph' in element.get('class', []):\n",
+    "                # Append the paragraph text to the list under the current heading if a heading was found\n",
+    "                if current_heading:\n",
+    "                    character_info_dict[current_heading].append(element.get_text(strip=True))\n",
+    "            elif element.name == 'table' and 'a-table' in element.get('class', []):\n",
+    "                # Check for specific table classes if needed, but targeting 'a-table' seems sufficient based on description\n",
+    "                 if current_heading:\n",
+    "                    # Extract table data\n",
+    "                    table_data = []\n",
+    "                    header_row = element.find('tr')\n",
+    "                    if header_row:\n",
+    "                        headers = [th.get_text(strip=True) for th in header_row.find_all('th')]\n",
+    "                        data_rows = element.find_all('tr')[1:] # Skip header row\n",
+    "                        for row in data_rows:\n",
+    "                            cells = [td.get_text(strip=True) for td in row.find_all('td')]\n",
+    "                            if len(headers) == len(cells):\n",
+    "                                table_data.append(dict(zip(headers, cells)))\n",
+    "                    # Add table data to the list under the current heading, maybe with a key to indicate it's a table\n",
+    "                    if table_data: # Only add if table data was actually extracted\n",
+    "                         character_info_dict[current_heading].append({'table_data': table_data})\n",
+    "\n",
+    "\n",
+    "        # --- Format the extracted information ---\n",
+    "        # Join paragraphs under each heading and include tables\n",
+    "        formatted_character_info = {}\n",
+    "        for heading, content_list in character_info_dict.items():\n",
+    "            paragraph_content = [item for item in content_list if not isinstance(item, dict) or 'table_data' not in item]\n",
+    "            table_content = [item for item in content_list if isinstance(item, dict) and 'table_data' in item]\n",
+    "\n",
+    "            heading_data = {}\n",
+    "            if paragraph_content:\n",
+    "                heading_data['paragraphs'] = \"\\n\".join(paragraph_content)\n",
+    "            if table_content:\n",
+    "                heading_data['tables'] = table_content\n",
+    "\n",
+    "            if heading_data: # Only include the heading in the formatted output if it has content\n",
+    "                formatted_character_info[heading] = heading_data\n",
+    "\n",
+    "\n",
+    "        # --- Combine with Image URLs ---\n",
+    "        # Get the character's icon image URL from the character_images dictionary using the cleaned character_name\n",
+    "        icon_image_url = character_images.get(character_name, 'No Icon Image Available')\n",
+    "        # Get the character's main image URL from the character_main_image dictionary\n",
+    "        main_image_url = character_main_image.get(character_name, 'No Main Image Available')\n",
+    "\n",
+    "\n",
+    "        # Append the collected data for this character\n",
+    "        character_details_list.append({\n",
+    "            'Character Name': character_name,\n",
+    "            'Character Icon URL': icon_image_url,\n",
+    "            'Character Main Image URL': main_image_url, # Added main image URL\n",
+    "            'Profile URL': profile_url,\n",
+    "            'Character Info': formatted_character_info # Store the structured information dictionary\n",
+    "        })\n",
+    "\n",
+    "    except requests.exceptions.RequestException as e:\n",
+    "        print(f\"Error fetching {profile_url}: {e}\")\n",
+    "        # Use the cleaned character_name for the error entry as well\n",
+    "        cleaned_name = character_name_with_suffix.replace('_page', '').strip()\n",
+    "        character_details_list.append({\n",
+    "            'Character Name': cleaned_name,\n",
+    "            'Character Icon URL': character_images.get(cleaned_name, 'No Icon Image Available'),\n",
+    "            'Character Main Image URL': character_main_image.get(cleaned_name, 'No Main Image Available'), # Added main image URL for error case\n",
+    "            'Profile URL': profile_url,\n",
+    "            'Character Info': f\"Error fetching data: {e}\", # Indicate error in info field\n",
+    "        })\n",
+    "    except Exception as e:\n",
+    "        print(f\"An unexpected error occurred while processing {profile_url}: {e}\")\n",
+    "        # Use the cleaned character_name for the error entry as well\n",
+    "        cleaned_name = character_name_with_suffix.replace('_page', '').strip()\n",
+    "        character_details_list.append({\n",
+    "            'Character Name': cleaned_name,\n",
+    "            'Character Icon URL': character_images.get(cleaned_name, 'No Icon Image Available'),\n",
+    "            'Character Main Image URL': character_main_image.get(cleaned_name, 'No Main Image Available'), # Added main image URL for error case\n",
+    "            'Profile URL': profile_url,\n",
+    "            'Character Info': f\"An unexpected error occurred: {e}\", # Indicate error in info field\n",
+    "        })\n",
+    "\n",
+    "# Now character_details_list contains the scraped data for each character\n",
+    "# The next step is to convert this into a DataFrame and save to CSV\n",
+    "print(f\"Finished scraping details for {len(character_details_list)} characters.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1be8751-0585-4419-9e4a-326f990d368c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert the list of dictionaries into a pandas DataFrame\n",
+    "character_df = pd.DataFrame(character_details_list)\n",
+    "\n",
+    "# Display the first few rows to verify the data\n",
+    "display(character_df.head())\n",
+    "\n",
+    "# Define the CSV file name\n",
+    "csv_file = 'character_data.csv'\n",
+    "\n",
+    "# Save the DataFrame to a CSV file\n",
+    "character_df.to_csv(csv_file, index=False)\n",
+    "\n",
+    "print(f\"Character details saved to '{csv_file}'\")"
    ]
   },
   {
