--- a/Scraper/Game_Data_Scraper.ipynb
+++ b/Scraper/Game_Data_Scraper.ipynb
@@ -62,7 +62,9 @@
   {
    "cell_type": "markdown",
    "id": "939d804b-2ec8-4169-9a0d-58c5fa78594e",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Chapter"
    ]
@@ -238,7 +240,9 @@
   {
    "cell_type": "markdown",
    "id": "38922740-6036-439e-b71f-d1cf6db19c56",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Chapter walkthrough"
    ]
@@ -575,7 +579,9 @@
   {
    "cell_type": "markdown",
    "id": "94fec3cf-ef7e-4edc-90b2-e34ac532b7bb",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Tips and Tricks"
    ]
@@ -1121,7 +1127,9 @@
   {
    "cell_type": "markdown",
    "id": "cfc6b9cb-a036-43b8-8824-eaac37f4001d",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Characters"
    ]
@@ -1842,12 +1850,23 @@
     "                if element.name == 'h3' and element.get('id') == 'hm_3':\n",
     "                    break\n",
     "\n",
-    "                # Extract paragraph text\n",
+    "                # Extract paragraph text and content within <q> tags\n",
     "                if element.name == 'p' and 'a-paragraph' in element.get('class', []):\n",
-    "                     # Extract all text content from the paragraph, including nested tags\n",
-    "                    paragraph_text = \"\".join(content.get_text(strip=True) for content in element.contents if isinstance(content, str) or content.name in ['span', 'b'])\n",
+    "                    # Extract all text content from the paragraph, including nested tags\n",
+    "                    paragraph_text_parts = []\n",
+    "                    for content in element.contents:\n",
+    "                        if isinstance(content, str):\n",
+    "                            paragraph_text_parts.append(content.strip())\n",
+    "                        elif hasattr(content, 'name') and content.name in ['span', 'b', 'a']:\n",
+    "                            paragraph_text_parts.append(content.get_text(strip=True))\n",
+    "                        elif hasattr(content, 'name') and content.name == 'q': # Extract text from <q> tags\n",
+    "                             paragraph_text_parts.append(content.get_text(strip=True))\n",
+    "\n",
+    "                    paragraph_text = \" \".join(paragraph_text_parts).strip()\n",
+    "\n",
     "                    if paragraph_text:\n",
     "                        details['Paragraph Text'].append(paragraph_text)\n",
+    "\n",
     "\n",
     "                    # Extract image URLs within this paragraph\n",
     "                    img_tags = element.find_all('img')\n",
@@ -1897,8 +1916,18 @@
     "                     while next_sibling:\n",
     "                         if next_sibling.name in ['h2', 'h3']:\n",
     "                             break # Stop if we hit another heading\n",
-    "                         if next_sibling.name == 'p' and 'a-paragraph' in next_sibling.get('class', []):\n",
-    "                             step_content['paragraphs'].append(next_sibling.get_text(strip=True))\n",
+    "                         if hasattr(next_sibling, 'name') and next_sibling.name == 'p' and 'a-paragraph' in next_sibling.get('class', []):\n",
+    "                             # Extract text from paragraph and <q> tags within it\n",
+    "                             paragraph_text_parts = []\n",
+    "                             for content in next_sibling.contents:\n",
+    "                                 if isinstance(content, str):\n",
+    "                                     paragraph_text_parts.append(content.strip())\n",
+    "                                 elif hasattr(content, 'name') and content.name in ['span', 'b', 'a']:\n",
+    "                                      paragraph_text_parts.append(content.get_text(strip=True))\n",
+    "                                 elif hasattr(content, 'name') and content.name == 'q': # Extract text from <q> tags\n",
+    "                                      paragraph_text_parts.append(content.get_text(strip=True))\n",
+    "                             step_content['paragraphs'].append(\" \".join(paragraph_text_parts).strip())\n",
+    "\n",
     "                             # Find images within this paragraph as well\n",
     "                             step_img_tags = next_sibling.find_all('img')\n",
     "                             for img in step_img_tags:\n",
@@ -1934,8 +1963,7 @@
     "\n",
     "# Now safe_locations_details is a list of dictionaries containing the scraped details for each location\n",
     "# You can inspect this list or convert it to a DataFrame\n",
-    "print(f\"Finished scraping details for {len(safe_locations_details)} safe locations.\")\n",
-    "\n"
+    "print(f\"Finished scraping details for {len(safe_locations_details)} safe locations.\")"
    ]
   },
   {
