--- a/Core Logic/LLM Memory.ipynb
+++ b/Core Logic/LLM Memory.ipynb
@@ -10,14 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "fd5b8913-441e-4ba8-a4fb-c3f2047bd7f4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pip install langchain langchain_community langchain_huggingface faiss-cpu\n",
-    "#pip install sentence-transformers\n",
-    "#pip install hf_xet"
+    "#!pip install langchain langchain_community langchain_huggingface faiss-cpu\n",
+    "#!pip install sentence-transformers\n",
+    "#!pip install hf_xet"
    ]
   },
   {
@@ -40,7 +40,8 @@
     "from langchain_core.documents import Document\n",
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "from langchain_huggingface import HuggingFaceEmbeddings\n",
-    "from langchain_community.vectorstores import FAISS"
+    "from langchain_community.vectorstores import FAISS\n",
+    "from sentence_transformers import SentenceTransformer"
    ]
   },
   {
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "id": "f4bce899-3e11-496d-a550-fd100fd3eedf",
    "metadata": {},
    "outputs": [
@@ -95,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "id": "d3df78b6-29d4-462f-9b23-a1dba83bd3be",
    "metadata": {},
    "outputs": [
@@ -154,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "id": "4c13f46f-0fb5-4615-91a9-0fe7d208cb27",
    "metadata": {},
    "outputs": [],
@@ -167,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "id": "69a48192-60f4-4923-9f35-093a9e8e526a",
    "metadata": {},
    "outputs": [
@@ -194,19 +195,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "id": "3c06c019-3d93-4a15-a706-6467ec8c4bb5",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_ve_model():\n",
-    "    ve_model = HuggingFaceEmbeddings(model_name=\"sentence-transformers/all-MiniLM-L12-v2\")\n",
-    "    return ve_model"
+    "    ve_model= HuggingFaceEmbeddings(model_name=\"sentence-transformers/all-MiniLM-L12-v2\")\n",
+    "    return ve_model\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "id": "3160591e-468c-4d41-8232-94c6eae7c896",
    "metadata": {},
    "outputs": [],
@@ -224,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "id": "4f4f789a-4cf5-4976-99f2-186f4999848b",
    "metadata": {},
    "outputs": [],
@@ -238,7 +239,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -252,7 +253,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
